k8s/gatekeeper/constraints/drop-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDropCapabilities
metadata:
  name: containers-must-drop-all-capabilities
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["apps", "ml-serving"]
