k8s/gatekeeper/constraints/no-host-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoHostNamespace
metadata:
  name: no-host-namespace
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["apps", "ml-serving"]
